--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TVMaze App</title>
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="icon.png" type="image/png">
+  <link rel="icon" href="https://static.tvmaze.com/images/tvm-header-logo.png" type="image/png">
 </head>
 <body>
-  <!-- Splash -->
+  <!-- Pantalla de carga (Splash) -->
   <div id="splash">
-    <img src="icon.png" alt="TVMaze Logo" class="logo">
+    <img src="https://static.tvmaze.com/images/tvm-header-logo.png" alt="TVMaze Logo" class="logo">
+    <br>
     <h1>TVMaze App</h1>
   </div>
 
@@ -35,5 +36,6 @@
   <script src="js/info.js"></script>
   <script src="js/navigation.js"></script>
   <script src="js/main.js"></script>
+
 </body>
 </html>
